--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //추가
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //추가
 	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'// h2database 스프링 구동시 자동 실행
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
